K8S/loki-scalable/base/ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: loki"
  name: "garafana"
  annotations:
    cert-manager.io/issuer: "garafana-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: "garafana-ingress-cert"
      hosts: ["grafana.k3s"]
  rules:
    - host: "grafana.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "grafana"
                port:
                  number: 3000
